--- a/pitch.html
+++ b/pitch.html
@@ -209,7 +209,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: center 65%; /* Crop out top text portion */
+            object-position: center 85%; /* Crop out top text portion - more aggressive */
         }
 
         .image-overlay {
